[Android DomKey] Add TV, Navigate, Media and others missing mappings

This CL added/fixed 51 missing mappings according to UI Events spec,
most of which are new / not supported before.

Please refer to bug description for the full list of mappings.

spec:
https://w3c.github.io/uievents-key/

TEST=Manual
1. On Android go to https://cdn.rawgit.com/w3c/uievents/gh-pages/tools/key-event-viewer.html
2. Focus input field
3. Run command "adb shell input keyevent 275", etc
4. Verify produced "key"

BUG=662011

Review-Url: https://codereview.chromium.org/2501083002
Cr-Commit-Position: refs/heads/master@{#432797}

Former-commit-id: 69074537e7bd722e27bc2734d00d178bfea27f46